--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,12 +10,12 @@
 @use 'blocks/cartPeople';
 @use 'blocks/personPage';
 @use 'blocks/home';
-@use 'blocks/animatedRectangles';
 @use 'blocks/accordion';
 @use 'blocks/personPageSwiper';
-@use 'blocks/animations';
+@use 'blocks/preloader';
 @use 'blocks/loader';
 @use 'blocks/searchBar';
+@use 'blocks/authForm';
 
 
 
