--- a/src/styles/blocks/_accordion.scss
+++ b/src/styles/blocks/_accordion.scss
@@ -6,18 +6,17 @@
 
 .accordion {
   cursor: pointer;
-  padding: 15px 25px;
+  padding: 10px 0px;
   display: flex;
   align-items: center;
-  margin-top: 20px;
   transition:  0.6s ease;
 }
 
 .accordion__title {
-  font-size: 20px;
+  font-size: 18px;
   text-align: left;
-  color: var(--color-dark);
-  font-family: 'BezierSans-Bold';
+  color: #575454;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   letter-spacing: 0.04em;
 }
 
@@ -37,9 +36,10 @@
 }
 
 .accordion__text {
-    font-family: "Fira Sans", sans-serif;
   font-weight: 400;
-  font-size: 20px;
-  padding: 15px 25px;
+  font-size: 18px;
+  padding: 10px;
+  font-weight: 600;
+  color: #000;
   font-family: 'BezierSans-Light';
 }
