--- a/src/styles/blocks/_personPage.scss
+++ b/src/styles/blocks/_personPage.scss
@@ -23,10 +23,82 @@
     }
     &__mainInfo-photo{
         overflow: hidden;
-        border-radius: rem(4);
+        border-radius: rem(32);
         width: 25%;
+        border-radius: 32px;
+        overflow: hidden;
     }
+
+    &__gallery {
+        margin-top: 100px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px;
+    
+        &-item {
+            object-fit: cover;
+            width: 100%;
+        }
+    }
+    &__description {
+        margin: 100px 0;
+    }
+    &__mainInfo-container{
+        margin-top: 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+        h6{
+            color: #000;
+            span {
+                margin-right: 20px;
+                color: #575454;
+                font-size: 18px;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            }
+        }
+    }
+
+    &__modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0,0,0,0.9);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+        cursor: pointer;
+    }
+    &__modal-boxModal {
+        width: 95%;
+        height: 90%;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+    &__modal-button {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        background-color: rgba(0,0,0,0.5);
+        color: white;
+        border: none;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        font-size: 20px;
+    }
+
     @include mobile {
+        &__mainInfo-name{
+            font-size: rem(32);
+        }
         &__mainInfo-photo{
             width: 100%;
         }
@@ -35,6 +107,12 @@
         }
         &__mainInfo-text{
             width: 100%;
+        }
+        &__mainInfo-container {
+            grid-template-columns: 1fr;
+        }
+        &__gallery {
+            grid-template-columns: 1fr;
         }
     }
 }
